[gd_scene load_steps=3 format=1]

[ext_resource path="res://assets/Intro.tex" type="Texture" id=1]
[ext_resource path="res://scenes/main_menu_buttons.gd" type="Script" id=2]

[node name="Control" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="background" type="TextureFrame" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
texture = ExtResource( 1 )
stretch_mode = 0

[node name="buttons" type="VBoxContainer" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 472.0
margin/top = 209.0
margin/right = 932.0
margin/bottom = 459.0
custom_constants/separation = 10
alignment = 0
script/script = ExtResource( 2 )

[node name="start_game" type="TextureButton" parent="buttons"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 460.0
margin/bottom = 76.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
params/resize_mode = 0
params/stretch_mode = 0

[node name="options" type="TextureButton" parent="buttons"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 86.0
margin/right = 460.0
margin/bottom = 162.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
params/resize_mode = 0
params/stretch_mode = 0

[node name="quit" type="TextureButton" parent="buttons"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 172.0
margin/right = 460.0
margin/bottom = 250.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
params/resize_mode = 0
params/stretch_mode = 0

[connection signal="pressed" from="buttons/start_game" to="buttons" method="_on_start_game_pressed"]

[connection signal="pressed" from="buttons/options" to="buttons" method="_on_options_pressed"]

[connection signal="pressed" from="buttons/quit" to="buttons" method="_on_quit_pressed"]


