extends VBoxContainer

# class member variables go here, for example:
# var a = 2
# var b = "textvar"

func _ready():
	# Called every time the node is added to the scene.
	# Initialization here
	pass


func _on_start_game_pressed():
	pass # replace with function body


func _on_options_pressed():
	pass # replace with function body


func _on_quit_pressed():
	pass # replace with function body
